--- a/reference.bib
+++ b/reference.bib
@@ -37,6 +37,13 @@
   url={https://www.teaconnect.org/Resources/?id=369}
 }
 
+@book{tea2017,
+  title={2016 TEA/AECOM Theme Index and Museum Index},
+  author={Themed Entertainment Association, AECOM},
+  year={2016},
+  url={https://www.teaconnect.org/images/files/TEA_235_103719_170601.pdf}
+}
+
 @article{schneider_2019,
   title={Theme Park Attendance Crosses Half-Billion Mark for 1st Time},
   url={https://www.usnews.com/news/best-states/florida/articles/2019-05-23/theme-park-attendance-crosses-half-billion-mark-for-1st-time},
@@ -58,4 +65,18 @@ url = "http://www.sciencedirect.com/science/article/pii/S0925753518311238",
 author = "Kathryn Woodcock",
 keywords = "Amusement rides, Safety, Accidents, Theme parks, Carnivals, Water parks",
 abstract = "This study describes worldwide occurrence of accidents involving amusement rides. The study compiled and classified reports in international media coverage for a one-year period, analysing event type, ride type, operation type, and regional location. Media reports provided limited detail and almost certainly omitted some events but remain the only publicly available data on a global scale. Over the year, 182 accident events were reported, from 38 countries, of which 51 events involved a fatality. Mechanical rides and roller coasters were involved in 87 events. Fixed-site rides (amusement and theme parks), mobile rides, and waterparks were involved with a similar number of cases. The most common event type with fixed-site and mobile rides was ride malfunction (63 cases). In waterparks, drowning or near-miss of drowning was most common (27 cases). Just 11 reports involved improper rider action, 12 involved failure of reasonable action, and 11 involved medical conditions or reactions. Occurrence as a proportion of attendance was highest in Latin America, predominantly involving mechanical non-tracked rides; water attractions predominated in North America. Lower prevalence of malfunctions in North America suggests value of professional development for mechanics and inspectors and strong regulation to promote international safety standards."
+}
+
+@book{iaapa_2017,
+  place={Orlando, FL},
+  journal={IAAPA Global theme and Amusement Park Outlook 2017–2021},
+  author={International Association of Amusement Parks and Attractions},
+  year={2017}
+}
+
+@book{ipaa_2018,
+  place={Alexandria, VA},
+  journal={IAAPA RIDE SAFETY REPORT – NORTH AMERICA – 2018},
+  author={International Association of Amusement Parks and Attractions},
+  year={2018}
 }
