New data wrangling code to fix date format in texas data set. Updated reference list in referece.bib.

--- a/reference.bib
+++ b/reference.bib
@@ -124,3 +124,67 @@
   year={2020},
   month={Jul}
 }
+
+@book{tea2019,
+  journal={TEA/AECOM 2019 Theme Index and Museum Index: The Global Attractions Attendance Report},
+  author={Theme Index and Museum Index/AECOM},
+  year={2019}
+}
+
+@article{woodcock2014amusement,
+  title={Amusement ride injury data in the United States},
+  author={Woodcock, Kathryn},
+  journal={Safety science},
+  volume={62},
+  pages={466--474},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@book{iaapa2018,
+  place={Alexandria, VA},
+  journal={IAAPA RIDE SAFETY REPORT – NORTH AMERICA – 2018},
+  author={International Association of Amusement Parks and Attractions},
+  year={2018}
+}
+
+@book{iaapa2017,
+  place={Orlando, FL},
+  journal={Global theme and Amusement Park Outlook 2017–2021},
+  author={International Association of Amusement Parks and Attractions},
+  year={2017}
+}
+
+@article{dataworld,
+  title={Texas Amusement Park Accidents},
+  url={https://data.world/amillerbernd/texas-amusement-park-accidents},
+  author={Millerbernd, Annie},
+  year={2018},
+  month={Mar}
+}
+
+@misc{tdi,
+  title={Amusement ride FAQs},
+  url={https://www.tdi.texas.gov/commercial/lcamuseinfo.html#reports},
+  journal={Texas Department of Insurance},
+  author={Texas Department of Insurance},
+  year={2019},
+  month={Apr}
+}
+
+@misc{saferpark_web,
+  title={Accident Reports from State/Federal Regulators},
+  url={https://ridesdatabase.org/saferparks/data/},
+  journal={Saferparks},
+  author={Saferparks},
+  year={2020}
+}
+
+@misc{schneider_2019,
+  title={Theme Park Attendance Crosses Half-Billion Mark for 1st Time},
+  url={https://www.usnews.com/news/best-states/florida/articles/2019-05-23/theme-park-attendance-crosses-half-billion-mark-for-1st-time},
+  journal={U.S. News & World Report},
+  author={Schneider, Mike},
+  year={2019},
+  month={May}
+}
