--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ author:
 date: "`r Sys.Date()`"
 output: 
   bookdown::html_document2
-bibliography: references.bib
+bibliography: reference.bib
 biblio-style: authoryear-comp
 ---
 
@@ -35,24 +35,22 @@ tx_injuries <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidyt
 
 safer_parks <- read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2019/2019-09-10/saferparks.csv")
 
-tx_policies <- read.csv(here::here("data/tx_policies.csv")) %>% 
-  janitor::clean_names() %>% 
-  select(-name_of_operation)
+tx_policies <- read.csv(here::here("data/tx_policies.csv"))
 ```
 
 # Introduction and Motivation
 
 Families and friends tend to spend their holidays and weekends in amusement parks. The popularity of amusement park has been growing in popularity in recent years, with worldwide attendance at the top 10 amusement park groups reached half a billion mark for the first time last year [@schneider_2019], with 4% year-on-year growth [@tea2019].
 
-With this ever increasing popularity, it is therefore not unreasonable to consider that the safety of amusement rides is a subject to substantial public interests [@WOODCOCK2019171]. It was estimated that the annual number of ride-related injuries in North America was 1,289 in 2018; which is 26% higher compared to 2017 [@ipaa_2018]. International Association of Amusement Parks and Attractions further stated that approximately 11% of those injuries are "serious", meaning they result in urgent admission and hospitalization for more than 24 hours for non-medical observation reasons, or causes fatality.
+With this ever increasing popularity, it is therefore not unreasonable to consider that the safety of amusement rides is a subject to substantial public interests [@woodcock2014amusement]. It was estimated that the annual number of ride-related injuries in North America was 1,289 in 2018; which is 26% higher compared to 2017 [@iaapa2018]. International Association of Amusement Parks and Attractions further stated that approximately 11% of those injuries are "serious", meaning they result in urgent admission and hospitalization for more than 24 hours for non-medical observation reasons, or causes fatality.
 
-While accidents occurred in amusement parks are arguably not frequent, they generate prominent effects when they happen. International Association of Amusement Parks and Attractions [@-iaapa_2017] reported that following a ride malfunction in Australia killing four people, the park and also other venues in Australia suffer considerable declines in attendance. This shows that public confidence, safety, and commercial feasibility are strongly linked [@WOODCOCK2019171].
+While accidents occurred in amusement parks are arguably not frequent, they generate prominent effects when they happen. International Association of Amusement Parks and Attractions [-@iaapa2017] reported that following a ride malfunction in Australia killing four people, the park and also other venues in Australia suffer considerable declines in attendance. This shows that public confidence, safety, and commercial feasibility are strongly linked [@woodcock2014amusement].
 
 There are 25 amusement parks in Texas already [@wiki]. Indeed, amusement parks are good place for kids and young people, but there are also much news reporting accidents in amusement park, and some news are horrible. These news remind people to take care of themselves when playing. More importantly, amusement parks should reduce the probability of mechanical failure and operation errors.
 
 Thorough evaluations to injury records related to amusement parks are aligned with public interests and are integral to encourage constant improvement. This paper intends to find factors that have major influence to amusement ride accidents. Uncovering this insight may encourage amusement park owners to utilize their resources more wisely in favor of those groups or equipment that are at the most risk. In addition, this report may also facilitate regulatory bodies in developing safety standards and regulations.
 
-This study intends to find out the patterns within injuried groups. The patterns refer to the high-risk groups, high-risk equipment and seasonal trend of injuries. We believe amusement park must make the effort to reduce the incidents; the effort refers to maintaining equipments, training staff and monitoring visitors. At same time, visitors should also follow the parks regulations and equipment instructions. After all, visitors should be responsible for their own safeties in the first place. Reduce the injuries occur in amusement parks and increase the well beings of society. 
+This study intends to find out the patterns within injuried groups. The patterns refer to the high-risk groups, high-risk equipment and seasonal trend of injuries. We believe amusement park must make the effort to reduce the incidents; the effort refers to maintaining equipment, training staff and monitoring visitors. At same time, visitors should also follow the parks regulations and equipment instructions. After all, visitors should be responsible for their own safeties in the first place. Reduce the injuries occur in amusement parks and increase the well beings of society. 
 
 Firstly, description of data used in the report and how it is prepared for analysis will be discussed. Then, analysis and findings acquired from the data set will be presented and discussed.
 
@@ -60,7 +58,7 @@ Firstly, description of data used in the report and how it is prepared for analy
 
 The datasets are downloaded from [here](https://github.com/rfordatascience/tidytuesday/tree/master/data/2019/2019-09-10) from GitHub. There are two datasets provided in the repository; one originated from [data.world](https://data.world/amillerbernd/texas-amusement-park-accidents) and another from [Saferparks database](https://ridesdatabase.org/saferparks/data/).
 
-The data.world data set originated from Texas Department of Insurance (TDI) [@dataworld]. It is a record of any injuries caused by an amusement ride from February the 1st 2013 to February the 1st 2017 occurring in the State of Texas (data.world, 2020). An amusement ride is "any mechanical, gravity, or water device or devices that carry or convey passengers along, around, or over a fixed or restricted route or course or within a defined area for the purpose of giving its passengers amusement, pleasure, or excitement" [@tdi]. According to TDI [-@tdi], a quarterly injury report needed to be submitted by amusement ride owners and operators. TDI further stated that this record relates to any injuries that require medical treatment or result in death. 
+The data.world data set originated from Texas Department of Insurance (TDI) [@dataworld]. It is a record of any injuries caused by an amusement ride from February the 1st 2013 to February the 1st 2017 occurring in the State of Texas [@dataworld]. An amusement ride is "any mechanical, gravity, or water device or devices that carry or convey passengers along, around, or over a fixed or restricted route or course or within a defined area for the purpose of giving its passengers amusement, pleasure, or excitement" [@tdi]. According to TDI [-@tdi], a quarterly injury report needed to be submitted by amusement ride owners and operators. TDI further stated that this record relates to any injuries that require medical treatment or result in death. 
 
 This data set has `r nrow(tx_injuries)` number of observations and `r ncol(tx_injuries)` number of variables. Fig \@ref(fig:quality-of-tx) shows the data set has too many missing values in **other** variable and many missing values in **serial_no** variable. Good news is that these two variables has little effects on our analysis, thus, we can remove these two variables. **Age** should be converted to numeric variable and **injury_date** should be date variable.
 
@@ -68,7 +66,7 @@ This data set has `r nrow(tx_injuries)` number of observations and `r ncol(tx_in
 vis_dat(tx_injuries)
 ```
 
-The accidents records in the Saferparks data set, on the other hand, originated from the U.S. State and Federal safety agencies regulating amusement rides [@saferparks]. Saferparks achieved this by submitting public records requests to those agencies (both federal and states agencies). In some cases, additional requests were submitted to specific agencies to achieve particular goals [@saferparks]. As a result, Saferparks needs to harmonize these data sets into their database.  
+The accidents records in the Saferparks data set, on the other hand, originated from the U.S. State and Federal safety agencies regulating amusement rides [@saferpark_web]. Saferparks achieved this by submitting public records requests to those agencies (both federal and states agencies). In some cases, additional requests were submitted to specific agencies to achieve particular goals [@saferpark_web]. As a result, Saferparks needs to harmonize these data sets into their database.  
 
 It has `r nrow(safer_parks)` observations and `r ncol(safer_parks)` variables. Fig \@ref(fig:quality-of-safer) shows 4 variables have too many missing values to be analysed, therefore, we ought to ignore them. **acc_date** should be converted to date variable. Although **manufacturer** has many missing values as well, we decided to keep it because it may be insightful.
 
@@ -80,9 +78,9 @@ vis_dat(safer_parks)
 
 There is limited documentation related to accident reports provided by TDI. It is therefore difficult to determine the limitation related to the data set. In addition to a considerable amount of missing value to some of the variables, data dictionary is not provided by TDI. As a result, it is difficult to be certain about what some of the variables represent. Lastly, there is some inconsistency of format in *injury_date* variable.
 
-According to Saferparks [-@saferparks], reporting criteria and its level of details, types of equipment included, and years covered vary widely by year, industry sector, jurisdictions, and other factors. Saferparks further stated that States that is transparent, vigilantly monitor safety incidents, and implement data management system that is efficient will log higher number of accidents. As a result, this is and indications of being more attentive to safety, not less [@saferparks]. 
+According to Saferparks [-@saferpark], reporting criteria and its level of details, types of equipment included, and years covered vary widely by year, industry sector, jurisdictions, and other factors. Saferparks further stated that States that is transparent, vigilantly monitor safety incidents, and implement data management system that is efficient will log higher number of accidents. As a result, this is and indications of being more attentive to safety, not less [@saferpark]. 
 
-While the data set can be used to uncover insights of how patrons are hurt in amusement rides, Saferparks do not recommend the data set to be used for comparison across states, parks, rides or years [@saferparks]. One of the reasons for this is that State laws in relation to amusement ride related injury reporting vary widely. For instance, it is mandatory to report go-kart accidents in Flordia but not in California.
+While the data set can be used to uncover insights of how patrons are hurt in amusement rides, Saferparks do not recommend the data set to be used for comparison across states, parks, rides or years [@saferpark]. One of the reasons for this is that State laws in relation to amusement ride related injury reporting vary widely. For instance, it is mandatory to report go-kart accidents in Flordia but not in California.
 
 Due to these limitations, the report will not use the Saferparks data set to analyze nation-wide patterns. Hence, this report will largely focus on amusement park accidents that occur in Texas, United States of America.
 
@@ -92,17 +90,35 @@ Due to these limitations, the report will not use the Saferparks data set to ana
 *possibly need to convert some variables to factors*
 
 ```{r clean}
-tx_injuries %>% 
-  select(-other, -serial_no, -injury_report_rec) %>% 
-  mutate(age = as.numeric(age),
-         injury_date = as.Date(injury_date, format = "%m/%d/%Y")) # convert to date?
+#cleaning the injury_date variable
+#there were some inconsistency in the format
+tx_injuries <- tx_injuries %>% 
+  mutate(injury_date = case_when(
+    nchar(injury_date) == 5 ~ as.Date(as.numeric(injury_date), origin = "1899-12-30"),
+    TRUE ~ mdy(injury_date)
+  ))
+
+tx_policies <- tx_policies %>%
+  janitor::clean_names() %>% 
+  mutate(agent = case_when(
+    agent == "Ace American Ins Co (Chubb)" ~ "ACE American Insurance Company",
+    agent == "Ace American Insurance Company" ~ "ACE American Insurance Company",
+    agent == "Hartford Fire Insurance Compan" ~ "Hartford Fire Insurance Company",
+    agent == "T.H.E Insurance company" ~ "T.H.E. Insurance Company",
+    agent == "Certain Underwriters at Lloyds" ~ "Lloyds",
+    TRUE ~ as.character(agent)
+  ))
 ```
+
+
 
 ```{r tx-complete}
 #joining tx_injuries tibble with tx_policies tibble
 tx_comp <- tx_injuries %>% 
   left_join(tx_policies,
-            by = c("injury_report_rec" = "i_record"))
+            by = c("injury_report_rec" = "i_record")) %>% 
+  select(-name_of_operation.y) %>% 
+  rename(name_of_operation = name_of_operation.x)
 ```
 
 # Analysis and findings
@@ -246,8 +262,76 @@ In summary, amusement parks should pay extra attention on roller coaster because
 According to TDI [-@tdi_req], every amusement ride in Texas is required to display a compliance sticker. To get these stickers, rides must be insured and inspected [@tdi_req]. TDI, however, are not involved with rides inspections. Instead, it is the ride owner's insurance company that are responsible to perform these inspections. This section will explore whether there are correlation between insurance company and number of accidents.
 
 ```{r accidents-by-insurance}
-tx_comp %>% group_by(agent) %>% 
-  tally()
+tx_policies_smry <- tx_policies %>% 
+  group_by(agent) %>% 
+  tally() %>% 
+  arrange(desc(n)) %>% 
+  rename(insurance_agent = agent,
+         num_operations_maintained = n)
+
+tx_comp %>% group_by(agent) %>%
+  filter(agent != "NA") %>% 
+  tally() %>% 
+  arrange(desc(n)) %>% 
+  left_join(tx_policies_smry,
+            by = c("agent" = "insurance_agent")) %>% 
+  rename(total_accidents = n,
+         insurance_agent = agent) %>% 
+  mutate(accidents_per_operation = round(total_accidents/num_operations_maintained, digits = 2))
+```
+
+```{r test, include=FALSE}
+tx_comp %>% group_by(agent) %>%
+  filter(agent != "NA") %>% 
+  tally() %>% 
+  arrange(desc(n)) %>% 
+  ggplot(aes(x = n,
+             y = reorder(agent, n))) +
+  geom_col()
+
+tx_comp %>% group_by(name_of_operation) %>%
+  filter(name_of_operation != "NA") %>% 
+  tally() %>% 
+  arrange(desc(n)) %>% 
+  head(10) %>% 
+  kable() %>% 
+  kable_styling()
+
+tx_comp %>% 
+  filter(name_of_operation != "NA") %>% 
+  filter(agent != "NA") %>% 
+  group_by(name_of_operation, agent) %>% 
+  tally() %>% 
+  arrange(desc(n)) %>%
+  head(10) %>% 
+  kable() %>% 
+  kable_styling()
+
+
+
+tx_policies %>% 
+   group_by(agent, name_of_operation) %>% 
+   tally() %>% 
+   arrange(desc(n)) %>% 
+   kable() %>% 
+   kable_styling()
+
+```
+
+```{r bus-type}
+safer_parks %>% filter(source == "Texas Dept. of Insurance") %>% 
+  group_by(bus_type) %>% 
+  summarise(total_injured = sum(num_injured)) %>% 
+  arrange(desc(total_injured)) %>% 
+  kable() %>% 
+  kable_styling()
+
+safer_parks %>% filter(source == "Texas Dept. of Insurance") %>% 
+  group_by(category) %>% 
+  summarise(total_injured = sum(num_injured)) %>% 
+  arrange(desc(total_injured)) %>% 
+  kable() %>% 
+  kable_styling()
 ```
 
 # Acknowledgments
