--- a/reference.bib
+++ b/reference.bib
@@ -120,7 +120,7 @@
 @misc{tdi_req,
   title={Amusement ride requirements},
   url={https://www.tdi.texas.gov/commercial/indexamusement.html},
-  journal={Texas Department of Insurance},
+  author={Texas Department of Insurance},
   year={2020},
   month={Jul}
 }
@@ -175,7 +175,7 @@
 @misc{saferpark_web,
   title={Accident Reports from State/Federal Regulators},
   url={https://ridesdatabase.org/saferparks/data/},
-  journal={Saferparks},
+  author={Saferparks},
   author={Saferparks},
   year={2020}
 }
@@ -187,4 +187,11 @@
   author={Schneider, Mike},
   year={2019},
   month={May}
+}
+
+@misc{tdi_pol,
+  author = {Texas Department of Insurance},
+  title = {Amusement ride current insurance policies},
+  url= {https://www.tdi.texas.gov/commercial/lcamusepolicy.html},
+  year={2020}
 }
